# fix-my-kit

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  tmp-dts-list.txt  tsconfig.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  a1b2c3d4e5f6_add_is_published_to_repair_requests.py  b2c3d4e5f6a7_add_room_device_positions.py  baf83bbd2dfc_initial_schema.py  c3d4e5f6a7b8_add_category_icon.py  d4e5f6a7b8c9_add_audience_map_grid.py  e5f6a7b8c9d0_add_position_grid_cell.py  f1a2b3c4d5e6_add_audience.py  f1a2b3c4d5e7_add_resolution_desc_to_repair_requests.py  f6a7b8c9d0e1_add_map_door_edge.py  g2h3i4j5k6l7_add_repair_request_attachments.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  audience.py  category.py  device.py  enums.py  repair_history.py  repair_request.py  room_device_position.py  user.py
backend/app/schemas/: __init__.py  admin_stats.py  attachments.py  audience.py  auth.py  category.py  device.py  public_device.py  repair_history.py  repair_request.py  room_map.py  suggest.py  tracker.py  tracker_webhook.py  user.py
backend/app/services/: admin_bootstrap.py  admin_stats_service.py  attachment_storage.py  attachment_validation.py  category_icon_service.py  device_list_query.py  (+9 more)
(+121 files in other folders)
