[project]
name = "fix-my-kit-backend"
version = "0.1.0"
description = "FastAPI backend for Fix My Kit"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "pydantic-settings",
    "PyJWT",
    "python-multipart",
    "alembic",
]

[tool.uv]
package = false
